// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | SegmentedControl Controlled Behaviour 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c3 {
  box-sizing: border-box;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  position: absolute;
  width: 33.333333333333336%;
  height: 32px;
  background-color: #FFFFFF;
  left: 0%;
  margin: -1px 0 0 0;
  pointer-events: none;
  border: 1px solid #EBEBE8;
  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.07);
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  border: none;
  padding: 0;
  background-color: transparent;
  cursor: pointer;
  outline: none;
}

.c5[aria-checked='true'] {
  pointer-events: none;
}

.c1 {
  position: relative;
  background-color: #F5F5F5;
  height: 32px;
  margin: 2px;
}

.c4 {
  width: 100%;
  height: 100%;
}

<div
  style={
    Object {
      "backgroundColor": "white",
      "height": "100%",
      "margin": "50px",
      "width": "250px",
    }
  }
>
  <div
    className="c0 c1"
    role="radiogroup"
  >
    <div
      className="c2"
    />
    <div
      className="c3 c4"
    >
      <button
        aria-checked={true}
        className="c5"
        onClick={[Function]}
        role="radio"
      >
        <span
          className="c6"
        >
          Option 1
        </span>
      </button>
    </div>
    <div
      className="c3 c4"
    >
      <button
        aria-checked={false}
        className="c5"
        onClick={[Function]}
        role="radio"
      >
        <span
          className="c7"
        >
          Option 2
        </span>
      </button>
    </div>
    <div
      className="c3 c4"
    >
      <button
        aria-checked={false}
        className="c5"
        onClick={[Function]}
        role="radio"
      >
        <span
          className="c7"
        >
          Option 3
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | SegmentedControl Default 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c3 {
  box-sizing: border-box;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  position: absolute;
  width: 33.333333333333336%;
  height: 32px;
  background-color: #FFFFFF;
  left: 0%;
  margin: -1px 0 0 0;
  pointer-events: none;
  border: 1px solid #EBEBE8;
  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.07);
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  border: none;
  padding: 0;
  background-color: transparent;
  cursor: pointer;
  outline: none;
}

.c5[aria-checked='true'] {
  pointer-events: none;
}

.c1 {
  position: relative;
  background-color: #F5F5F5;
  height: 32px;
  margin: 2px;
}

.c4 {
  width: 100%;
  height: 100%;
}

<div
  style={
    Object {
      "backgroundColor": "white",
      "height": "100%",
      "margin": "50px",
      "width": "50%",
    }
  }
>
  <div
    className="c0 c1"
    role="radiogroup"
  >
    <div
      className="c2"
    />
    <div
      className="c3 c4"
    >
      <button
        aria-checked={true}
        className="c5"
        onClick={[Function]}
        role="radio"
      >
        <span
          className="c6"
        >
          Option 1
        </span>
      </button>
    </div>
    <div
      className="c3 c4"
    >
      <button
        aria-checked={false}
        className="c5"
        onClick={[Function]}
        role="radio"
      >
        <span
          className="c7"
        >
          Option 2
        </span>
      </button>
    </div>
    <div
      className="c3 c4"
    >
      <button
        aria-checked={false}
        className="c5"
        onClick={[Function]}
        role="radio"
      >
        <span
          className="c7"
        >
          Option 3
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | SegmentedControl Last Item Selected 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c3 {
  box-sizing: border-box;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  position: absolute;
  width: 50%;
  height: 32px;
  background-color: #FFFFFF;
  left: 50%;
  margin: -1px 0 0 0;
  pointer-events: none;
  border: 1px solid #EBEBE8;
  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.07);
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  border: none;
  padding: 0;
  background-color: transparent;
  cursor: pointer;
  outline: none;
}

.c5[aria-checked='true'] {
  pointer-events: none;
}

.c1 {
  position: relative;
  background-color: #F5F5F5;
  height: 32px;
  margin: 2px;
}

.c4 {
  width: 100%;
  height: 100%;
}

<div
  style={
    Object {
      "backgroundColor": "white",
      "height": "100%",
      "margin": "50px",
      "width": "110px",
    }
  }
>
  <div
    className="c0 c1"
    role="radiogroup"
  >
    <div
      className="c2"
    />
    <div
      className="c3 c4"
    >
      <button
        aria-checked={false}
        className="c5"
        onClick={[Function]}
        role="radio"
      >
        <span
          className="c6"
        >
          %
        </span>
      </button>
    </div>
    <div
      className="c3 c4"
    >
      <button
        aria-checked={true}
        className="c5"
        onClick={[Function]}
        role="radio"
      >
        <span
          className="c7"
        >
          SEK
        </span>
      </button>
    </div>
  </div>
</div>
`;
